# graphix

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  notes  rustfmt.toml  todo.md  vendor.py
graphix-ast-pack/: Cargo.toml
graphix-ast-pack/src/: lib.rs
graphix-compiler/: Cargo.toml
graphix-compiler/proptest-regressions/expr/: test.txt
graphix-compiler/src/: analysis.rs  dbgenv.rs  effects.rs  env.rs  fusion.rs  gir.rs  gir_interp.rs  gir_jit.rs  gir_jit_helpers.rs  gir_jit_scaffold.rs  ide.rs  kernel_abi.rs  kernel_ir.rs  kir_interp.rs  kir_jit.rs  kir_jit_helpers.rs  kir_jit_intern.rs  lib.rs  node_shape.rs  perfdbg.rs  static_resolve.rs  tval.rs
graphix-compiler/src/expr/: mod.rs  modpath.rs  pattern.rs  print.rs  resolver.rs  serialize.rs  sync_desugar.rs  test.rs
graphix-compiler/src/fusion/: builder.rs  emit.rs  emit_helpers.rs  intern.rs  kernel.rs  kernel_abi.rs  lowering.rs  mod.rs  scaffold.rs  vocab.rs  walker.rs
graphix-compiler/src/node/: array.rs  bind.rs  callsite.rs  collection.rs  compiler.rs  data.rs  dynamic.rs  error.rs  forloop.rs  genn.rs  lambda.rs  map.rs  mod.rs  module.rs  op.rs  pattern.rs  region.rs  select.rs
graphix-compiler/src/typ/: cast.rs  contains.rs  fntyp.rs  matches.rs  mod.rs  normalize.rs  print.rs  setops.rs  tval.rs  tvar.rs
graphix-derive/: Cargo.toml
graphix-derive/src/: lib.rs
graphix-fuzz/: Cargo.toml  build.rs  soak.sh
graphix-fuzz/findings/: README.md
graphix-fuzz/findings/abort-seam-jul2026/: 01_depth_trip_settled_taint.gx
graphix-fuzz/findings/abstract-opaque-overtag-jul2026/: 00_het_list_fn_fold.gx  01_het_list_nested_list.gx
graphix-fuzz/findings/arith-tc-unsound-jul2026/: 01_tvar_plus_string_accepted.gx
graphix-fuzz/findings/arm-wake-body-fire-jul2026/: 01_refwrite_filter_refire.gx  02_const_scrutinee_own_binds.gx  03_capture_only_callback.gx
graphix-fuzz/findings/audit-jul2026/: 01_shadowed_name_cross_kernel.gx  02_two_monomorphizations_one_region.gx  03_fold_callback_shared_adt_double_count.gx
graphix-fuzz/findings/bottom-scrutinee-jun2026/: 01_bottom_scrutinee_falls_through.gx  02_inline_bottom_scrutinee.gx
graphix-fuzz/findings/builtin-taint-gate-jul2026/: 00_once_tainted_not_counted.gx
graphix-fuzz/findings/call-arity-jul2026/: 00_excess_pos_skips_nested_check.gx  01_excess_pos_silently_dropped.gx
graphix-fuzz/findings/callee-flags-jul2026/: 01_bottom_call_result_as_unused_arg.gx
graphix-fuzz/findings/capture-name-alias-jul2026/: 01_captured_x_reads_fold_element.gx
graphix-fuzz/findings/cast-wire-jul2026/: 00_let_bound_cast.gx  01_narrow_cast_qop.gx  02_narrow_cast_saturation.gx
graphix-fuzz/findings/clone-scope-resolution-jul2026/: 01_nested_callback_filter_wrong_module.gx
graphix-fuzz/findings/clone-wake-root-jul2026/: 01_cloned_callback_connect_loop.gx
graphix-fuzz/findings/composite-qop-jun2026/: 01_composite_success_qop_segv.gx  02_borrowed_inner_qop.gx
graphix-fuzz/findings/const-body-firing-jul2026/: p1_empty_static.gx  p4_no_taint.gx  p6_two_folds.gx  p7_counter_src.gx  p8_one_fold_stmt.gx
graphix-fuzz/findings/crash-triage-jul2026/: 01_buffer_encode_pad_overflow.gx  02_array_init_capacity_overflow.gx  03_placeholder_leaf_read.gx  04_seq_runaway_range.gx
graphix-fuzz/findings/depth-guard-jul2026/: 01_depth_limit_boundary.gx  02_depth_under_limit.gx  02_rec_lambda_in_hof_slot.gx  03_nested_tail_loop_mode_parity.gx  03_rec_in_split_callback.gx  04_hof_callback_unit.gx  05_hof_callback_unit_under.gx  06_trip_local_bottom_recovery.gx  07_tail_select_trip_escalation.gx
graphix-fuzz/findings/depth-guard-marshal-jul2026/: 01_nested_arg_selfcall_double_charge.gx
graphix-fuzz/findings/dyncall-jun2026/: 01_pending_string_dyncall_drop.gx  02_dead_pend_discard_position.gx
graphix-fuzz/findings/dyncall-layout-jul2026/: 01_shared_callee_stale_layout.gx
graphix-fuzz/findings/dyncall-partial-args-jul2026/: 00_window_bottom_val.gx  01_window_scalar_bottom_val.gx
graphix-fuzz/findings/dyncall-pending-taint-jul2026/: 01_pad_guard_unconsumed_bind.gx  02_pad_guard_consumed_silent.gx  03_pend_chain_cached_downstream.gx
graphix-fuzz/findings/dyncall-valueshape-firing-jul2026/: 01_buffer_const_extrafire.gx  02_cast_connect_selfwake.gx
graphix-fuzz/findings/dynmod-ref-priming-jul2026/: 01_module_level_builtin_call.gx
graphix-fuzz/findings/empty-literal-firing-jul2026/: 01_empty_array_fires_every_invocation.gx
graphix-fuzz/findings/evict-stub-order-jul2026/: 00_evicted_callee_symbol.gx
graphix-fuzz/findings/filtermap-push-confusion-jul2026/: 00_slice_elem_sigsegv.gx
graphix-fuzz/findings/firing-jul2026/: 01_guarded_select_selection_memory.gx  02_hof_const_body_prev_len.gx  03_nested_hof_invariant_source.gx  (+1 more)
graphix-fuzz/fuzz/: divergence_000000.gx
graphix-fuzz/src/: corpus.rs  files.rs  generate.rs  lib.rs  main.rs  mutate.rs  schedule.rs  trace.rs
graphix-lsp/: Cargo.toml
graphix-lsp/src/: convert.rs  diagnostics.rs  lib.rs  main.rs  position.rs  server.rs  state.rs  uri.rs  workspace.rs
graphix-package/: Cargo.toml
graphix-package-re/: Cargo.toml
graphix-package-re/src/: lib.rs  test.rs
graphix-package/skel/: Cargo.toml  deps.rs  lib.rs  mod.gx  mod.gxi
graphix-package/src/: lib.rs  test.rs
graphix-shell/: Cargo.toml  export-source.py
graphix-shell/examples/: barchart.gx  line-gauge.gx
graphix-shell/src/: completion.rs  deps.rs  input.rs  lib.rs  lsp_backend.rs  main.rs  packages.rs
graphix-shell/tests/: examples_compile.rs
graphix-stdlib/: Cargo.toml
graphix-stdlib/src/: array.gx  array.gxi  array.rs  core.gx  core.gxi  core.rs  lib.rs  map.gxi  map.rs  net.gx  net.gxi  net.rs  rand.gxi  rand.rs  re.gxi  re.rs  str.gx  str.gxi  str.rs  time.gx  time.gxi  time.rs
ide/tree-sitter-graphix/: Cargo.toml  build.rs  grammar.js  lib.rs  package-lock.json  package.json  tree-sitter.json
stdlib/graphix-package-bench/: Cargo.toml  build.rs
stdlib/graphix-package-core/: Cargo.toml
stdlib/graphix-package-gui/: Cargo.toml
stdlib/graphix-package-net/: Cargo.toml
stdlib/graphix-tests/: Cargo.toml
(+2255 files in other folders)
