[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[profile.dev]
opt-level = "s"
lto = "thin"
debug = true

[workspace.dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
anyhow = "1"
arcstr = { version = "1", features = ["serde"] }
async-trait = { version = "0.1" }
bitflags = "2"
bytes = { version = "1", features = ["serde"] }
cargo_toml = "0.22.3"
chrono = { version = "^0.4.24", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
combine = "4"
compact_str = { version = "0.9", features = ["serde"] }
crossterm = { version = "0.29", features = ["event-stream"] }
const_format = "0.2"
derive_builder = "0.20"
dirs = "6"
enumflags2 = "0.7"
escaping = "0.2.2"
extended-notify = "0.1.0"
fish-printf = "0.2.1"
flexi_logger = "0.31"
futures = "0.3"
fxhash = "0.2"
handlebars = "6"
immutable-chunkmap = { version = "2.1", features = ["pool", "serde"] }
indexmap = "2"
log = "0.4"
netidx-core = { path = "../netidx/netidx-core", version = "0.31.0" }
netidx-protocols = { path = "../netidx/netidx-protocols", version = "0.31.0" }
netidx-value = { path = "../netidx/netidx-value", version = "0.31.3" }
netidx = { path = "../netidx/netidx", version = "0.31.0", default-features = false }
parking_lot = "0.12.1"
poolshark = { version = "0.2.6" }
rand = "0.9"
ratatui = { version = "0.30", features = ["widget-calendar"] }
reedline = "0.45"
regex = "1"
rust_decimal = { version = "1", features = [
    "serde-with-float",
    "serde-with-str",
    "serde-with-arbitrary-precision",
] }
serde_derive = "1"
serde_json = "1"
serde = { version = "1", features = ["rc"] }
sled = { version = "0.34" }
smallvec = { version = "1", features = ["const_generics", "union"] }
tempfile = "3"
time = "0.3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "time",
    "io-util",
    "fs",
    "sync",
    "process",
    "macros",
    "signal",
    "io-std",
] }
toml = { version = "0.9" }
toml_edit = { verson = "0.24" }
triomphe = { version = "0.1" }
uuid = "1"
walkdir = "2.5"

[workspace]
resolver = "2"
members = [
    "graphix-shell",
    "graphix-compiler",
    "graphix-rt",
    "graphix-stdlib",
    "graphix-package",
    "graphix-derive"
]
