[package]
name = "graphix-compiler"
version = "0.9.0"
authors = ["Eric Stokes <eestokes@pm.me>"]
edition = "2024"
homepage = "https://graphix-lang.github.io/graphix"
repository = "https://github.com/graphix-lang/graphix"
description = "A dataflow language for UIs and network programming, compiler"
documentation = "https://docs.rs/graphix-compiler"
readme = "../README.md"
license = "MIT"
categories = ["network-programming", "compilers", "gui"]
exclude = ["book", "../book"]

[features]
default = []
krb5_iov = []

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
combine = { workspace = true }
compact_str = { workspace = true }
cranelift-codegen = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-jit = { workspace = true }
cranelift-module = { workspace = true }
cranelift-native = { workspace = true }
derive_builder = { workspace = true }
enumflags2 = { workspace = true }
escaping = { workspace = true }
futures = { workspace = true }
nohash = { workspace = true }
ahash = { workspace = true }
immutable-chunkmap = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
netidx-core = { workspace = true }
netidx-derive = { workspace = true }
netidx-value = { workspace = true }
parking_lot = { workspace = true }
poolshark = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde_derive = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
tokio = { workspace = true }
triomphe = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
env_logger = { workspace = true }
rust_decimal = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-graphix = { workspace = true }
