[package]
name = "graphix-lsp"
version = "0.8.0"
edition = "2024"
authors = ["Eric Stokes <eestokes@pm.me>"]
homepage = "https://graphix-lang.github.io/graphix"
repository = "https://github.com/graphix-lang/graphix"
description = "A dataflow language for UIs and network programming, compiler"
documentation = "https://docs.rs/graphix-lsp"
readme = "../README.md"
license = "MIT"
categories = ["network-programming", "compilers", "gui"]

[dependencies]
graphix-compiler = { version = "0.8.0", path = "../graphix-compiler" }
lsp-types = { workspace = true }
lsp-server = { workspace = true }
anyhow = { workspace = true }
arcstr = { workspace = true }
compact_str = { workspace = true }
nohash = { workspace = true }
ahash = { workspace = true }
log = { workspace = true }
netidx = { workspace = true }
parking_lot = { workspace = true }
percent-encoding = { workspace = true }
poolshark = { workspace = true }
serde_json = { workspace = true }
triomphe = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
