[package]
name = "graphix-stdlib"
version = "0.3.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2024"
homepage = "https://graphix-lang.github.io/graphix"
repository = "https://github.com/graphix-lang/graphix-stdlib"
description = "A dataflow language for UIs and network programming, standard library"
documentation = "https://docs.rs/graphix-stdlib"
readme = "../README.md"
license = "MIT"
categories = ["network-programming", "compilers", "gui"]

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
combine = { workspace = true }
compact_str = { workspace = true }
derive_builder = { workspace = true }
enumflags2 = { workspace = true }
escaping = { workspace = true }
extended-notify = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
graphix-compiler = { version = "0.3.0", path = "../graphix-compiler" }
poolshark = { workspace = true }
immutable-chunkmap = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
netidx-core = { workspace = true }
netidx-protocols = { workspace = true }
netidx-value = { workspace = true }
netidx = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde_derive = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
triomphe = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
graphix-rt = { version = "0.2.0", path = "../graphix-rt" }
proptest = "1"
env_logger = "0.11"
