[package]
name = "graphix-package-{{name}}"
version = "0.1.0"
authors = ["you <you@domain.net>"]
edition = "2024"
homepage = "https://your-homepage.net"
repository = "https://github.com/{{user}}/graphix-package-{{name}}"
documentation = "https://docs.rs/graphix-package-{{name}}"
description = "A Graphix package for ..."
readme = "README.md"
license = "MIT"
categories = []

[dependencies]
graphix-package = "{{version}}"
graphix-package-core = "{{version}}"
graphix-compiler = "{{version}}"
graphix-derive = "{{version}}"
graphix-rt = "{{version}}"
anyhow = "1"
arcstr = "1"
compact_str = "0.8"
fxhash = "0.2"
netidx-core = "0.31"
netidx-value = "0.31"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "time",
    "io-util",
    "fs",
    "sync",
    "process",
    "macros",
    "signal",
    "io-std",
] }
triomphe = "0.1"
async-trait = "0.1"
