[package]
name = "graphix-package-{{name}}"
version = "0.1.0"
authors = ["you <you@domain.net>"]
edition = "2024"
homepage = "https://your-homepage.net"
repository = "https://github.com/{{user}}/graphix-package-{{name}}"
documentation = "https://docs.rs/graphix-package-{{name}}"
description = "A Graphix package for ..."
readme = "README.md"
license = "MIT"
categories = []

[dependencies]
graphix-package = "{{graphix_package_version}}"
graphix-package-core = "{{graphix_package_core_version}}"
graphix-compiler = "{{graphix_compiler_version}}"
graphix-derive = "{{graphix_derive_version}}"
graphix-rt = "{{graphix_rt_version}}"
anyhow = "{{anyhow_version}}"
arcstr = "{{arcstr_version}}"
fxhash = "{{fxhash_version}}"
netidx-core = "{{netidx_core_version}}"
netidx-value = "{{netidx_value_version}}"
tokio = { version = "{{tokio_version}}", features = [
    "rt-multi-thread",
    "net",
    "time",
    "io-util",
    "fs",
    "sync",
    "process",
    "macros",
    "signal",
    "io-std",
] }
triomphe = "{{triomphe_version}}"
async-trait = "{{async_trait_version}}"
