[package]
name = "graphix-package-bench"
version = "0.9.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2024"
homepage = "https://graphix-lang.github.io/graphix"
repository = "https://github.com/graphix-lang/graphix"
description = "Graphix benchmarks - fused kernels used to measure the ceiling of native compilation."
license = "MIT"
categories = ["network-programming", "compilers", "gui"]
exclude = ["../../book"]

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
compact_str = { workspace = true }
nohash = { workspace = true }
ahash = { workspace = true }
graphix-compiler = { version = "0.9.0", path = "../../graphix-compiler" }
graphix-derive = { version = "0.9.0", path = "../../graphix-derive" }
graphix-package = { version = "0.9.0", path = "../../graphix-package" }
graphix-package-core = { version = "0.9.0", path = "../graphix-package-core" }
graphix-rt = { version = "0.9.0", path = "../../graphix-rt" }
netidx-core = { workspace = true }
netidx-value = { workspace = true }
netidx = { workspace = true }
tokio = { workspace = true }
triomphe = { workspace = true }
