[package]
name = "graphix-package-gui"
version = "0.8.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2024"
homepage = "https://graphix-lang.github.io/graphix"
repository = "https://github.com/graphix-lang/graphix"
description = "A dataflow language for UIs and network programming, GUI package"
documentation = "https://docs.rs/graphix-package-gui"
readme = "../../README.md"
license = "MIT"
categories = ["network-programming", "compilers", "gui"]
exclude = ["../../book"]

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
arboard = { workspace = true }
bytes = { workspace = true }
arcstr = { workspace = true }
async-trait = { workspace = true }
compact_str = { workspace = true }
futures = { workspace = true }
nohash = { workspace = true }
ahash = { workspace = true }
indexmap = { workspace = true }
graphix-compiler = { version = "0.8.0", path = "../../graphix-compiler" }
graphix-derive = { version = "0.8.0", path = "../../graphix-derive" }
graphix-package = { version = "0.8.0", path = "../../graphix-package" }
graphix-package-core = { version = "0.8.0", path = "../graphix-package-core" }
graphix-package-str = { version = "0.8.0", path = "../graphix-package-str" }
graphix-rt = { version = "0.8.0", path = "../../graphix-rt" }
image = { workspace = true }
iced_core = { workspace = true }
iced_renderer = { workspace = true }
iced_runtime = { workspace = true }
iced_wgpu = { workspace = true }
iced_widget = { workspace = true }
log = { workspace = true }
netidx = { workspace = true }
netidx-core = { workspace = true }
netidx-derive = { workspace = true }
netidx-value = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
plotters = { workspace = true }
plotters-backend = { workspace = true }
poolshark = { workspace = true }
resvg = { workspace = true }
smallvec = { workspace = true }
tokio = { workspace = true }
triomphe = { workspace = true }
winit = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
nohash = { workspace = true }
ahash = { workspace = true }
graphix-package-array = { version = "0.8.0", path = "../graphix-package-array" }
graphix-package-map = { version = "0.8.0", path = "../graphix-package-map" }
graphix-package-sys = { version = "0.8.0", path = "../graphix-package-sys" }
netidx-core = { workspace = true }
poolshark = { workspace = true }
